# neuro-master

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 9bfd534d9eee_initial.py  a1b2c3d4e5f6_rename_yookassa_to_lava.py  b2c3d4e5f6a7_price_tokens_float.py  c3d4e5f6a7b8_add_price_per_second.py  d4e5f6a7b8c9_add_price_display_mode.py  e5f6a7b8c9d0_fix_price_display_mode_values.py
deploy/: backup.sh  deploy.sh  nginx.conf
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  client.ts  gallery.ts  generation.ts  models.ts  payments.ts  upload.ts  user.ts
frontend/src/hooks/: useTelegram.ts  useUser.ts  useWebSocket.ts
frontend/src/store/: userStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts  telegram.ts
src/: config.py  main.py
src/api/: __init__.py  app.py  dependencies.py
src/api/routes/: __init__.py  admin.py  auth.py  gallery.py  generation.py  health.py  models.py  payments.py  upload.py  uploads.py  user.py
src/api/schemas/: __init__.py  admin.py  common.py  gallery.py  generation.py  model.py  payment.py  user.py
src/api/websockets/: logs.py
src/bot/: __init__.py  loader.py
src/core/: __init__.py  database.py  exceptions.py  redis.py  security.py
src/modules/: __init__.py
src/shared/: __init__.py  constants.py  enums.py  logger.py
(+64 files in other folders)
