[project]
name = "ai-content-bot"
version = "0.1.0"
description = "Telegram Mini App for AI content generation"
requires-python = ">=3.11"
dependencies = [
    # Bot
    "aiogram>=3.13.0",
    
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    
    # Redis
    "redis>=5.2.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Utils
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    
    # Payments
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
